# swat4stats

./: .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  LICENSE  LICENSE.txt  README.md  README.rst  docker-compose-prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_local.txt  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/api/: docs.py  filters.py  pagination.py  serializers.py  utils.py  views.py
apps/api/filters/: __init__.py  base.py  games.py  search.py  servers.py
apps/api/views/: __init__.py  articles.py  games.py  maps.py  search.py  servers.py
apps/geoip/: __init__.py  admin.py  apps.py  entities.py  factories.py  managers.py  models.py  tasks.py
apps/geoip/migrations/: 0001_initial.py  (+1 more)
apps/news/: admin.py  entities.py  factories.py  models.py  renderer.py
apps/tracker/: __init__.py  admin.py  apps.py  const.py  discovery.py  entities.py  exceptions.py  factories.py  models.py  schema.py  signals.py  sitemaps.py  translation.py
apps/utils/: admin.py  cacheback.py  context_processors.py  enum.py  middleware.py  misc.py  schema.py  settings.py  test.py  throttling.py  views.py  xjson.py
assets/: robots.txt
conf/: crontab.txt  nginx.conf  supervisor.conf  uwsgi.ini
dockerfile/dev/: Dockerfile  app.Dockerfile  webpack.Dockerfile
dockerfile/prod/: Dockerfile  app.Dockerfile  uwsgi.ini
docs/: server_api.md
fabfile/: __init__.py  backend.py  cache.py  deploy.py  frontend.py  secrets.py  utils.py
fabfile/utils/: __init__.py
settings/: __init__.py  common.py  local.py  prod.py  test.py  utils.py
static/: 403.html  404.html  500.html  503.html  robots.txt
static/css/: base.css  fonts.css  fonts_old.css
static/cursor/: cursor_black.cur  cursor_yellow.cur
static/fonts/: airborne-webfont-webfont.eot  airborne-webfont.eot  bank_gothic_bold-webfont-demo.html  bank_gothic_bold-webfont-webfont.eot  bank_gothic_bold-webfont.eot  bank_gothic_bold-webfont.html  ds-digit-webfont.eot  ds_digit-webfont.eot  nok_bold_expanded-webfont.eot  nok_regular_expanded-webfont.eot  play_regular-webfont.eot
static/images/: cursor_bw.cur  cursor_bw_transparent.cur  cursor_transparent.cur
static/js/: base.js  common.js
static/less/: base.less
stats/: models.py  router.py
stats7/: admin.py  router.py
stats7/migrations/: 0001_initial.py
swat4stats/: celery.py  gunicorn.py  sentry.py  settings.py  urls.py  wsgi.py
swat4tracker/: __init__.py  celery.py  sentry.py  settings.py  urls.py  wsgi.py
swat4tracker/settings/: __init__.py  common.py  debug.py  local.py  production.py
tests/: conftest.py
tests/api/: test_docs.py  test_games.py  test_games_detail.py  test_games_highlights.py  test_games_list.py  test_news.py  test_popular_maps.py  test_popular_servers.py  test_search.py  test_search_players.py  test_search_servers.py  test_servers.py  test_servers_create.py  test_servers_detail.py  test_servers_list.py
tests/factories/: geoip.py  loadout.py  query.py  stats.py  streaming.py  tracker.py
tests/geoip/: test_models.py  test_tasks.py
tests/news/: test_article.py
tests/tracker/: test_commands.py  test_discovery_parser.py  test_julia_parser.py  test_models.py  test_parser.py  test_serverquery.py  test_sitemaps.py  test_tasks.py  test_utils.py  test_views.py
tests/utils/: test_enum.py  test_healthcheck.py  test_middleware.py  test_misc.py  test_schema.py  test_settings_utils.py  test_xjson.py
tracker/: __init__.py  admin.py  apps.py  config.py  const.py  context_processors.py  cron.py  decorators.py  definitions.py  exceptions.py  factories.py  forms.py  jobs.py  middleware.py  models.py  signals.py  sitemaps.py  tasks.py  translation.py  urls.py  utils.py  views.py
tracker/migrations/: 0001_initial.py  0002_add_upper_name_index_on_alias.py  0002_auto_20141122_1551_add_upper_name_index_on_alias.py  0002_auto__chg_field_serverstatus_gametype__chg_field_serverstatus_mapname_.py  0003_add_functional_index_on_game.py  0003_auto_20141122_1558_add_functional_index_on_game.py  0004_add_ip_length_index.py  0004_auto_20141122_1601_add_ip_length_index.py  0005_auto_20141122_1607_change_objective_id_column_type_to_bigint.py  0005_change_objective_id_column_type_to_bigint.py  0006_add_custom_index_on_player.py  0006_auto_20141122_1608_add_custom_index_on_player.py  0007_auto_20141122_1609_change_procedure_id_column_type_to_bigint.py  0007_change_procedure_id_column_type_to_bigint.py  0008_auto_20141122_1609_change_weapon_id_column_type_to_bigint.py  0008_change_weapon_id_column_type_to_bigint.py  0009_add_custom_index_on_rank.py  0009_auto_20141122_1611_add_custom_index_on_rank.py  0010_add_custom_index_on_server.py  0010_auto_20141122_1612_add_custom_index_on_server.py  0011_auto__add_index_player_alias_arrests__add_index_player_alias_score__ad.py  0011_server_pinned.py  0012_auto__add_article.py  0012_server_version.py  0013_article_renderer.py  0014_auto_20150513_1519.py  0014_auto__add_field_server_hostname.py  0015_auto_20160103_1442.py
tracker/south_migrations/: 0001_initial.py  0002_add_upper_name_index_on_alias.py  0003_add_functional_index_on_game.py  0004_add_ip_length_index.py  0005_change_objective_id_column_type_to_bigint.py  0006_add_custom_index_on_player.py  0009_add_custom_index_on_rank.py  0010_add_custom_index_on_server.py  0013_auto__del_field_server_key.py
tracker/sql/: alias.sql  game.sql  ip.sql  objective.sql  player.sql  procedure.sql  rank.sql  server.sql  weapon.sql
tracker/static/: 403.html  500.html  503.html
tracker/templates/: 404.html  stream.html
tracker/templatetags/: __init__.py  tracker.py
tracker/tests/: test_api.py  test_cron.py  test_models.py  test_signals.py  test_stream.py  test_tasks.py  test_utils.py  test_views.py
utils/: middleware.py  settings.py  staticfiles.py  xjson.py
utils/tests/: test_middleware.py
web/raw/: 403.html  404.html  500.html  503.html  robots.txt
(+305 files in other folders)
